@@ -1,3 +1,8 @@
+2011-05-16  Alan Modra  <amodra@gmail.com>
+
+	* ldlang.c (lang_leave_output_section_statement): Don't copy
+	previous lma_region if given address.
+
 2011-05-04  Alan Modra  <amodra@gmail.com>
 
 	PR ld/12726
